--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
+    "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "^17.0.15",
     "axios": "^0.26.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.0.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
